--- a/template.html
+++ b/template.html
@@ -5,7 +5,10 @@
 <head>
   <title>Forward Fitness Club</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale-=1">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
